# DiffDrive-Robot-Waypoint-Navigation-Web-Interface

arduino_code/encoder_reading/: encoder_reading.ino
arduino_code/left_motor/: left_motor.ino
arduino_code/motor_controller/: motor_controller.ino
arduino_code/motor_controller_v2/: motor_controller_v2.ino
arduino_code/motor_controller_v3/: motor_controller_v3.ino
arduino_code/motor_controller_v4/: motor_controller_v4.ino
arduino_code/right_motor/: right_motor.ino
catkin_ws/devel/: .rosinstall  local_setup.sh
catkin_ws/devel/include/jetbot_pro/: CalibrateAngularConfig.h  CalibrateLinearConfig.h  laserTrackingConfig.h  pidConfig.h
catkin_ws/devel/lib/hector_compressed_map_transport/: map_to_image_node
catkin_ws/devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
catkin_ws/devel/lib/hector_map_server/: hector_map_server
catkin_ws/devel/lib/hector_trajectory_server/: hector_trajectory_server
catkin_ws/devel/lib/jetbot_pro/: jetbot
catkin_ws/devel/lib/localization_data_pub/: ekf_odom_pub
catkin_ws/devel/lib/mobile_robot/: mobile_robot_hardware_interface  robot_controller
catkin_ws/devel/lib/mpu9250_imu_converter/: mpu9250_imu_converter_node
catkin_ws/devel/lib/pkgconfig/: arduino_test_communication.pc  hector_compressed_map_transport.pc  hector_geotiff.pc  hector_geotiff_launch.pc  hector_geotiff_plugins.pc  hector_imu_attitude_to_tf.pc  hector_imu_tools.pc  hector_map_server.pc  hector_map_tools.pc  hector_mapping.pc  hector_marker_drawing.pc  hector_nav_msgs.pc  hector_slam_launch.pc  hector_trajectory_server.pc  jetbot_pro.pc  jetson_camera.pc  localization_data_pub.pc  mobile_robot.pc  mpu9250_imu_converter.pc  mpu9250_imu_driver.pc  mpu9250_ros_driver.pc  my_package.pc  my_robot_description.pc  riotu_robot_pose_publisher.pc  robot_full20.pc  robot_slam.pc  rosserial_arduino.pc  rosserial_chibios.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  (+14 more)
catkin_ws/src/jetson_camera/: CMakeLists.txt  package.xml
catkin_ws/src/mobile_robot/: CMakeLists.txt  package.xml
catkin_ws/src/mobile_robot/config/: urdf.rviz
catkin_ws/src/mobile_robot/launch/: controller.launch  display.launch  jetson_nano_bot.launch  nox_bringup.launch  nox_navigation.launch  nox_slam.launch
catkin_ws/src/mobile_robot/maps/: my_map.yaml
catkin_ws/src/mobile_robot/meshes/: left_wheel.STL  right_wheel.STL
catkin_ws/src/mobile_robot/scripts/: test_node.py
catkin_ws/src/mobile_robot/src/: robot_controller.cpp
catkin_ws/src/mobile_robot/urdf/: mobile_robot.urdf.xacro
maps/: map_v1.pgm  map_v1.yaml  map_v2.pgm  map_v2.yaml  map_v2_new.pgm  map_v3.pgm  map_v3.yaml  map_v4.pgm  map_v4.yaml  map_v5.yaml
webserver/react-ros-robot/: package-lock.json  package.json
webserver/react-ros-robot/public/: index.html
webserver/react-ros-robot/src/: App.js  index.css  index.js
(+181 files in other folders)
